@@ -1,7 +1,12 @@
 # about ui files
 
+# thread view
 the files thread-view.css and thread-view.html have been copied directly from
 Gearys default theme [0]. changes have been made and more will be made. gearys
 licence specifies them to be available under the LGPL 2.1.
+
+# thread index
+
+the background image was fetched from: http://makepixelart.com/artists/anonymous/dinosaur, i have not found any other information on its author.
 
 [0] https://git.gnome.org/browse/geary/tree/theming
